# Cryptography

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: main.c
inc/: aes.h  aes_key.h  aes_transform.h  debug.h
libs/aes/: CMakeLists.txt
libs/aes/include/aes/: aes.h
libs/aes/src/: aes.c  aes_key.c  aes_transform.c  debug.c
libs/aes/test/: test_aes.c  test_aes_cipher.c  test_aes_cipher.h  test_aes_key.c  test_benchmark.c  test_utils.h
libs/dh/: CMakeLists.txt
libs/dh/include/dh/: dh.h
libs/dh/src/: dh.c
libs/dh/test/: test_dh.c  test_ec.c
libs/server/: CMakeLists.txt
libs/server/include/server/: active_clients.h  ake.h  broadcast.h  client.h  config.h  connection.h  msg.h  server.h  utils.h
libs/server/src/: active_clients.c  ake.c  broadcast.c  client.c  config.c  connection.c  msg.c  server.c  utils.c
libs/server/test/: test_serialize.c  test_server.c
scripts/: add_file.sh  add_file_c.sh  add_lib.sh
src/: aes.c  aes_key.c  aes_transform.c  debug.c
tests/: test.c  test_aes_cipher.c  test_aes_cipher.h  test_aes_key.c  test_aes_key.h  test_benchmark.c  test_benchmark.h  test_utils.h
